--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,26 +1,31 @@
+# Use an official Python image
 FROM python:3.11-slim
 
-# Install system packages
+# Install system dependencies
 RUN apt-get update && apt-get install -y \
     tesseract-ocr \
+    libgl1-mesa-glx \
     libglib2.0-0 \
     libsm6 \
-    libxrender1 \
     libxext6 \
+    libxrender-dev \
+    && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
 # Set working directory
 WORKDIR /app
 
-# Copy requirements and install Python dependencies
-COPY requirements.txt .
-RUN pip install -r requirements.txt
-
-# Copy app files
+# Copy project files
 COPY . .
 
-# Expose the port Render will use
+# Install Python dependencies
+RUN pip install --no-cache-dir -r requirements.txt
+
+# Set environment variables
+ENV PYTHONUNBUFFERED=1
+
+# Expose port (Render sets PORT, but this helps local testing too)
 EXPOSE 4001
 
-# Start the Flask app using gunicorn
-CMD ["gunicorn", "ocr_service:app", "--bind", "0.0.0.0:4001"]
+# Start the app using Gunicorn
+CMD ["gunicorn", "ocr_service:app", "--bind", "0.0.0.0:$PORT"]
