--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,13 +17,13 @@
     "web-vitals": "^2.1.4",
     "zustand": "^5.0.3"
   },
-  "scripts": {
+"scripts": {
   "start": "react-scripts start",
-  "build": "react-scripts build",
-  "postbuild": "copyfiles -u 1 public/_redirects build",
+  "build": "react-scripts build && cp public/_redirects build/ && cp public/static.json build/",
   "test": "react-scripts test",
   "eject": "react-scripts eject"
-},
+}
+,
   "eslintConfig": {
     "extends": [
       "react-app",
